# InfoButtons

./: .gitignore  DockerREADME.md  Dockerfile  README.md  docker-build.sh  docker-compose.yml  docker-run.sh  pom.xml
oib-request/: BUILDGUIDE  CMakeLists.txt  CTestConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  MIGRATIONGUIDE1617  Makefile  build-local.sh  checkstyle-reporter.cmake.in  cmake_install.cmake  deploy-local.sh  pom.xml  start-local.sh  va-checker.xml
oib-request/oib-core/: pom.xml
oib-request/oib-ext-resources/: pom.xml
oib-request/oib-ext-resources/oibrepo/UTSMetathesaurus/uts-metathesaurus/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
oib-request/oib-ext-resources/oibrepo/UTSMetathesaurus/uts-metathesaurus/1.4/: uts-metathesaurus-1.4.jar.md5  uts-metathesaurus-1.4.jar.sha1  uts-metathesaurus-1.4.pom  uts-metathesaurus-1.4.pom.md5  uts-metathesaurus-1.4.pom.sha1
oib-request/oib-ext-resources/src/main/resources/: validMappings.csv
oib-request/oib-ext-resources/src/test/resources/: core-data-annotation-context.xml  core-data-datasource-context.xml  core-profile-datasource-context.xml  hibernate.properties  serviceParams.properties  validMappings.csv
oib-request/oib-profile-schema/: pom.xml
oib-request/oib-profile-schema/src/main/resources/: ResourceProfile-v2.0.xsd  ResourceProfile-v2.0_LITE.xsd  ResourceProfile-v2.5_LITE.xsd  ResourceProfile-v2.6_LITE.xsd  ResourceProfile-v2.7_LITE.xsd  ResourceProfile-v2.8_LITE.xsd  ResourceProfile-v2.9_LITE.xsd  ResourceProfile.xsd  TerminologyInference.xsd
oib-request/oib-request-db/: pom.xml
oib-request/oib-request-db/src/test/resources/: core-data-annotation-context.xml  core-data-datasource-context.xml  core-profile-datasource-context.xml  core-valuelogs-annotation-context.xml  serviceParams.properties
oib-request/oib-request-inference-rxnorm/: pom.xml
oib-request/oib-request-schema/: pom.xml
oib-request/oib-request-schema/repo/org/openinfobutton/oib-profile-schema/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
oib-request/oib-request-schema/repo/org/openinfobutton/oib-request-jaxb/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
oib-request/oib-request-schema/src/main/resources/: KnowledgeResponse.xsd  REDS_MT010001UV-Restricted-flattened-08-19-2011.xsd  binding.xjb
oib-request/oib-request-service/: pom.xml
oib-request/oib-request-service/src/main/resources/: application.properties  core-data-annotation-context.xml  core-data-datasource-context.xml  core-liteprofile-datasource-context.xml  core-profile-datasource-context.xml  hibernate.properties  log4j.properties  log4j2.properties  removeNamespaces.xsl  serviceParams.properties  spring.properties
oib-request/oib-request-service/src/main/webapp/: InfobuttonQA.html  Infobutton_UI.xslt  OpenInfobuttonDemo-Local.html  OpenInfobuttonDemo.html  eMERGEDemo-Local.html  eMERGEDemo.html
oib-request/oib-request-service/src/test/resources/: convertingCategory.xsl  core-data-annotation-context.xml  core-data-datasource-context.xml  core-liteprofile-datasource-context.xml  core-profile-datasource-context.xml  hibernate.properties  import.sql  removeNamespaces.xsl  serviceParams.properties
oib-request/oib-service-test/: pom.xml
oib-request/oib-service-test/src/test/resources/: application.properties
oib-request/oib-valueset-matcher/: pom.xml
oib-request/oib-valueset-matcher/src/test/resources/: serviceParams.properties  testContext.xml
oib-request/uts-metathesaurus/: pom.xml
oib-responder/: BUILDGUIDE  CMakeLists.txt  LICENSE.txt  MIGRATIONGUIDE1011  checkstyle-reporter.cmake.in  pom.xml  pre-build-install.sh  suppressions.xml  va-checker.xml
oib-responder/docs/: Infobutton-Responder-Request-Logical-Specification-v0.2.docx  OpenInfobutton-Responder-Functional-Specification-v0.2.docx  OpenInfobutton-Responder-Functional-Tests.xlsx  OpenInfobutton-Responder-Regression-Tests.docx  URL-based implementation guide - R4 12-04-2012 final.docx
oib-responder/docs/maven-oracle-instructions/: maven-install-oracle.txt
oib-responder/mvn-proj-repo/org/openinfobutton/oib-app-model/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
oib-responder/mvn-proj-repo/org/openinfobutton/oib-app-service/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
oib-responder/oib-app-model/: pom.xml
oib-responder/oib-app-service/: pom.xml
oib-responder/oib-app-service/src/main/resources/: test-context.xml
oib-responder/oib-index-manager/: application-context.xml  pom.xml
oib-responder/oib-index-manager/src/main/resources/: app.properties  application-context.xml  jdbc.properties  uts.properties
oib-responder/oib-rdbms-model/: create-oib-model-mysql.sql  create-oib-model-oracle.sql  install-db.sh  migration1011.sql  migration2223.sql  oib-app-property-inserts.sql  oib-asset-inserts.sql  oib-asset-property-inserts.sql  oib-value-set-inserts.sql
oib-responder/oib-rdbms-model-v0.2/: oib-app-property-inserts.sql  oib-request-parameter_-nserts.sql  oib-value-set-code-inserts.sql
oib-responder/oib-rest-responder/: catalog.xml  nb-configuration.xml  pom.xml
oib-responder/oib-rest-responder/src/license/: oib-license-signature.ftl
oib-responder/oib-rest-responder/src/main/resources/: addTestData.sql  createTestDb.sql  hibernate.cfg.bak.xml  test-context.xml
oib-responder/oib-rest-responder/src/test/java/: SanityTest.java
oib-responder/oib_rdbms_model_v0.2/: create-oib-model-mysql.sql  oib_app_property_inserts.sql  oib_asset_inserts.sql  oib_asset_property_inserts.sql
oib-responder/rxnorm-rest-model/: catalog.xml  pom.xml
oib-responder/src/license/: oib-license-signature.ftl
oib-responder/src/main/resources/: addTestData.sql  application.properties
oib-responder/src/main/webapp/WEB-INF/: jdbc.oracle.properties  jdbc.properties  mvc-dispatcher-servlet.xml  web.xml
oib-responder/src/test/java/: SanityTest.java
oib-responder/uts-ws-client/: nbactions-release-profile.xml  nbactions.xml  pom.xml  run.sh
(+1955 files in other folders)
